# FairLogue

./: README.md  pyproject.toml
FairLogue/: __init__.py  requirements.txt
FairLogue/Component1/: activity_diagram.drawio  plots.py  synthetic_test.py
FairLogue/Component2/: counterfactual_IF_treatment_driver.py  ex_data_estimation.csv  ex_data_small.csv  functions_fairness.py  functions_format.py
FairLogue/Component2/Synthetic Data Generation/: ex_data_external.py
FairLogue/Component3/: README.md  estimation_functions.py  helpers.py  model.py  outcome_models.py  requirements.txt  synthetic_test.py
FairLogue/Component3/docs/: helpers.md  outcome_models.md
docs/: component1.md  component2.md  component3.md
examples/: 01_component1.ipynb  02_component2.ipynb  03_component3.ipynb
iftoolkit/: Supplemental Information.docx  ex_data_estimation.csv  ex_data_external.csv
iftoolkit.egg-info/: SOURCES.txt  requires.txt
iftoolkit/Component1/: __init__.py  intersectional_metrics.py  utilities.py
iftoolkit/Component2/: functions_plots.py
iftoolkit/Component2/Synthetic Data Generation/: ex_data_small.py
iftoolkit/Component3/: Fairness.py  glaucoma_synth_component3.csv
iftoolkit/Component3/docs/: model.md  plots.md
src/: README.md
src/iftoolkit.egg-info/: PKG-INFO  entry_points.txt  top_level.txt
src/iftoolkit/Component1/: containers.py  intersectional_metrics.py  plots.py
src/iftoolkit/Component2/: __init__.py  component2_workflow.drawio  functions_smallsubgroups.py
src/tests/: struct_test.py  test_component1.py  test_component2.py  test_component3.py
(+8 files in other folders)
