[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iftoolkit"
version = "0.1.0"
description = "Intersectional Fairness Toolkit with counterfactual estimation, modeling, and u-value inference."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Nick S." }]
dependencies = [
  # Core scientific stack (bounded for Py3.9–3.12)
  "numpy>=1.22,<2.1",          # 2.1 drops Py3.9
  "scipy>=1.10,<1.16",         # 1.16 drops Py3.9/3.10
  "pandas>=2.0,<2.4",          # broad Py3.9+ safe range

  # ML / modeling
  "scikit-learn>=1.3,<1.7",    # 1.7 requires Py>=3.10; cap for Py3.9 support
  "lightgbm>=4.0,<5.0",
  "xgboost>=2.0,<4.0",

  # Stats + plotting
  "statsmodels>=0.14,<0.15",
  "matplotlib>=3.6,<3.10",     # 3.10 requires Py>=3.10; cap for Py3.9
  "seaborn>=0.12,<0.14",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.4",
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.25",
]

[project.scripts]
iftoolkit = "iftoolkit.cli.main:app"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 100
target-version = "py39"